--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,6 +1,19 @@
 <div class="header">
     <h1>Logan Farr</h1>
     <h2>Architect. Executioner. Developer.</h2>
+    <div class="skills">
+        <div class="skill magento"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/magento.svg" /></div>
+        <div class="skill drupal"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/drupal.svg" /></div>
+        <div class="skill wordpress"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/wordpress.svg" /></div>
+        <div class="skill php"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/php.svg"  /></div>
+        <div class="skill aws"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/aws.svg" /></div>
+        <div class="skill html"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/html-5.svg" /></div>
+        <div class="skill css"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/css-3.svg" /></div>
+        <div class="skill angular"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/angular.svg" /></div>
+        <div class="skill node"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/node.svg" /></div>
+        <div class="skill github"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/github.svg" /></div>
+        <div class="skill adobe"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/adobe.svg" /></div>
+    </div>
 </div>
 <div class="portfolio">
     <div class="row">
