--- a/src/styles.css
+++ b/src/styles.css
@@ -37,6 +37,18 @@ a {
     text-decoration: none;
 }
 
+img {
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+    width: auto;
+}
+
+.clearfix {
+    clear: both;
+    overflow: auto;
+}
+
 @media all and (min-width: 768px) {
     h1 {
         font-size: 4em;
