--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -3,10 +3,24 @@
     <h2>Architect. Executioner. Developer.</h2>
     <div class="skills">
         <div class="skill magento"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/magento.svg" /></div>
-        <div class="skill drupal"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/drupal.svg" /></div>
         <div class="skill wordpress"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/wordpress.svg" /></div>
+        <div class="skill drupal"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/drupal.svg" /></div>
+        
         <div class="skill php"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/php.svg"  /></div>
-        <div class="skill aws"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/aws.svg" /></div>
+        <div class="skill aws">
+            <div class="tile-wrapper">
+                <div class="tile">
+                    <div class="side  front"></div>
+                    <div class="side   back"></div>
+                    <div class="side  right"></div>
+                    <div class="side   left"></div>
+                    <div class="side top">
+                        <img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/aws.svg" />
+                    </div>
+                    <div class="side bottom"></div>
+                </div>
+            </div>
+        </div>
         <div class="skill html"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/html-5.svg" /></div>
         <div class="skill css"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/css-3.svg" /></div>
         <div class="skill angular"><img src="https://s3-us-west-2.amazonaws.com/loganfarr/loganfarr-com/images/angular.svg" /></div>
